--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.4.0 <4.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,7 +34,10 @@ dependencies:
   file_picker: ^8.0.3
   flutter:
     sdk: flutter
-  flutter_chat_types: ^3.6.2
+#  flutter_chat_types: ^3.6.2
+#  flutter_chat_types:
+#    git:
+#      url: https://github.com/callmerj03/flutter_chat_types.git
   flutter_chat_ui:
     path: ../
   http: '>=0.13.6 <2.0.0'
@@ -43,10 +46,14 @@ dependencies:
   mime: ^1.0.5
   open_filex: ^4.4.0
   path_provider: ^2.1.3
-  uuid: ^3.0.7
+  uuid: ^4.1.0
+  fluttertoast: ^8.2.6
+#  keyboard_emoji_picker: ^1.0.3
+#  emoji_picker_flutter: ^2.2.0
+
 
 dev_dependencies:
-  dart_code_metrics: ^5.7.6
+  dart_code_metrics: ^5.6.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
