--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,14 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_chat_types: ^3.6.2
-  flutter_link_previewer: ^3.2.2
+#  flutter_chat_types: ^3.6.2
+  flutter_chat_types:
+    git:
+      url: https://github.com/callmerj03/flutter_chat_types.git
+#  flutter_link_previewer: ^3.2.2
+  flutter_link_previewer:
+    git:
+      url: https://github.com/callmerj03/flutter_link_previewer.git
   flutter_parsed_text: ^2.2.1
   intl: '>=0.17.0 <1.0.0'
   meta: '>=1.8.0 <2.0.0'
@@ -24,9 +30,11 @@ dependencies:
   scroll_to_index: ^3.0.1
   url_launcher: '>=6.1.12 <7.0.0'
   visibility_detector: ^0.4.0+2
+  super_context_menu:
+    path: packages/super_context_menu
 
 dev_dependencies:
-  dart_code_metrics: ^5.7.6
+  dart_code_metrics: ^5.6.0
   flutter_lints: '>=3.0.0 <5.0.0'
   flutter_test:
     sdk: flutter
