--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
   flutter:
     sdk: flutter
 #  flutter_chat_types: ^3.6.2
-  flutter_chat_types:
-    git:
-      url: https://github.com/callmerj03/flutter_chat_types.git
+#  flutter_chat_types:
+#    git:
+#      url: https://github.com/callmerj03/flutter_chat_types.git
 #  flutter_link_previewer: ^3.2.2
   flutter_link_previewer:
     git:
