remove context menu

--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,3 +1,5 @@
+// Top-level build file
+
 allprojects {
     repositories {
         google()
@@ -6,9 +8,11 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
