--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,19 +7,17 @@ homepage: https://flyer.chat
 repository: https://github.com/flyerhq/flutter_chat_ui
 
 environment:
-  sdk: '>=2.19.0 <4.0.0'
-  flutter: '>=3.0.0'
+  sdk: ">=3.5.0 <4.0.0"
 
 dependencies:
   diffutil_dart: '>=3.0.0 <5.0.0'
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-#  flutter_chat_types: ^3.6.2
-#  flutter_chat_types:
-#    git:
-#      url: https://github.com/callmerj03/flutter_chat_types.git
-#  flutter_link_previewer: ^3.2.2
+  #  flutter_chat_types: ^3.6.2
+  #  flutter_chat_types:
+  #    git:
+  #      url: https://github.com/callmerj03/flutter_chat_types.git
   flutter_link_previewer:
     git:
       url: https://github.com/callmerj03/flutter_link_previewer.git
@@ -30,9 +28,9 @@ dependencies:
   scroll_to_index: ^3.0.1
   url_launcher: '>=6.1.12 <7.0.0'
   visibility_detector: ^0.4.0+2
-  super_context_menu:
-    git:
-      url: https://github.com/callmerj03/super_context_menu.git
+#  super_context_menu:
+#    git:
+#      url: https://github.com/callmerj03/super_context_menu.git
 #  super_context_menu:
 #    path: packages/super_context_menu
 
