--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,13 +26,12 @@ dependencies:
   meta: '>=1.8.0 <2.0.0'
   photo_view: ^0.15.0
   scroll_to_index: ^3.0.1
+  super_context_menu:
+    git:
+      url: https://github.com/callmerj03/super_context_menu.git
   url_launcher: '>=6.1.12 <7.0.0'
   visibility_detector: ^0.4.0+2
-#  super_context_menu:
-#    git:
-#      url: https://github.com/callmerj03/super_context_menu.git
-#  super_context_menu:
-#    path: packages/super_context_menu
+
 
 dev_dependencies:
   dart_code_metrics: ^5.6.0
