--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   meta: '>=1.8.0 <2.0.0'
   photo_view: ^0.15.0
   scroll_to_index: ^3.0.1
+  emoji_picker_flutter: ^4.3.0
+
 #  super_context_menu:
 #    git:
 #      url: https://github.com/callmerj03/super_context_menu.git
