--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -26,11 +26,15 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.example"
     compileSdk = 35
-    ndkVersion "26.3.11579264"
+    ndkVersion "29.0.13113456"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_17
         targetCompatibility = JavaVersion.VERSION_17
+    }
+
+    kotlin {
+        jvmToolchain(17)
     }
 
     defaultConfig {
