--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,10 @@ dependencies:
   meta: '>=1.8.0 <2.0.0'
   photo_view: ^0.15.0
   scroll_to_index: ^3.0.1
-  emoji_picker_flutter: ^4.3.0
+  emoji_picker_flutter:
+    git:
+      url: https://github.com/callmerj03/emoji_picker_flutter.git
+      ref: master
 
 #  super_context_menu:
 #    git:
